...
            android:title="@string/main_nav_item_activity_event_showcase" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/news_nav_item_activity_event_showcase" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/map_nav_item_activity_event_showcase" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/schedule_nav_item_activity_event_showcase" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_thumbs_up_down_black_24dp"
            android:title="@string/feedback_nav" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_email_black_24dp"
            android:title="@string/contact_nav_item_activity_event_showcase" />
    </group>

    <group android:checkableBehavior="single"
        android:menuCategory="system"
...
    </group>

    <group android:checkableBehavior="single"
        android:menuCategory="system"
        android:id="@+id/event_showcase_group_system">
        <item
            android:id="@+id/nav_pick_event"
            android:icon="@drawable/ic_menu_black_24dp"
            android:title="@string/pick_event_nav_item_activity_event_showcase"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_applications_black_24dp"
            android:title="@string/settings"/>
    </group>

</menu>

