...
    <string name="invalid_email_error">Invalid email address</string>
    <string name="error_field_required">Required field</string>
    <string name="error_field_invalid">Invalid value</string>
    <string name="empty_password_error">The password cannot be empty</string>
    <string name="password_match_error">The passwords do not match</string>
    <string name="generic_auth_error">Could not authenticate. Unknown error.</string>
    <string name="help_text_activity_event_picking">Please select an event to continue</string>
    <string name="help_text_go_join_events">Please go explore and join an event to continue !</string>
    <string name="joined_help_text_activity_event_picking">Events you joined:</string>
    <string name="not_joined_help_text_activity_event_picking">Click here to go explore events !</string>
    <string name="double_back_press_to_exit">Press once again to exit</string>
    <string name="no_more_events_to_explore">Sorry, you\'ve already joined all the available events for now :\'( ! \n
        Please come back later !
    </string>
    <string name="event_successfully_joined">Event successfully joined !</string>
    <string name="event_successfully_unjoined">Event successfully unjoined !</string>

    <string name="successful_login_toast">Signed in</string>
    <string name="successful_registration_toast">Registered successfully</string>
    <string name="logout_toast">Logged out</string>

...
    <string name="event_feedback_submitted">Your feedback has been submitted !</string>
    <string name="event_feedback_already_submitted">Your feedback has already been submitted !</string>

    <string name="click_to_see_schedule">Click to see schedule</string>

    <!-- Generic text -->
    <string name="undo">Undo</string>
    <string name="welcome">Welcome on &app_name; !</string>
    <string name="done">Done</string>
    <string name="help">Help</string>
    <string name="save">Save</string>
    <string name="undone">Undone</string>
    <string name="undo_empty">Nothing to undo</string>
    <string name="ok">OK</string>
    <string name="save_and_exit">Do you want to save and exit ?</string>

    <!-- Creation form text-->
    <string name="create_form_hint_name">Name of the event</string>
    <string name="create_form_hint_description">Description of the event</string>
    <string name="create_form_hint_email">Email of the event organizer</string>
...
    <string name="create_form_hint_end_date">Ending date</string>
    <string name="create_form_upload_image">Upload image</string>
    <string name="image_successfully_uploaded">Event image successfully uploaded !</string>
    <string name="event_form_button_visibility">Allow public access to this event</string>
    <string name="create_form_delete_event_button">Delete this event !</string>
    <string name="button_yes">YES !</string>
    <string name="button_no">NO !</string>

    <string name="create_event_title">Create Event</string>
    <string name="edit_nav_item_activity_event">Event edition</string>
    <string name="create_event_canceled">Operation was unexpectedly cancelled.</string>
    <string name="create_event_error">An error occurred:</string>
    <string name="create_event_success">The event has been created!</string>
...

    <!-- Edition Fragment text-->
    <string name="map_edition_add_overlay">Add overlay edge</string>
    <string name="map_edition_add_spot">Add spot</string>
    <string name="map_edition_error_undo">Could not undo action. Dismissed it.</string>
    <string name="map_edition_error_not_done">Could not perform action. Dismissed it.</string>
    <string name="map_edition_info_text">To add a new SPOT or an EDGE to the OVERLAY, please LONG
        PRESS on the desired location.\n\n To move a SPOT or an EDGE of the OVERLAY, please CLICK
        and HOLD to drag it to the desired position.\n\n To edit a SPOT\'s information, please CLICK
        on the desired spot.\n\n To remove a SPOT or an EDGE of the OVERLAY, please click on the
        desired item.</string>
    <string name="content_description_facebook_logo">Facebook Logo</string>
    <string name="content_description_facebook_post_image">Facebook post image</string>
...
