...
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/not_joined_help_text_activity_event_picking"
            android:layout_width="match_parent"
            android:layout_height="@dimen/event_picking_bottom_sheet_peek"
            android:id="@+id/event_picking_bottom_sheet_text"
            android:gravity="center_vertical|center_horizontal"
            android:background="@drawable/background_primary_color_rounded"
            android:textColor="@color/colorSecondary"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
...
            />

    </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/not_joined_event_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp">

...
