<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context="ch.epfl.sweng.eventmanager.ui.event.interaction.fragments.EventAdminMainFragment"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/help_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp" />
</LinearLayout>
